Hotfix: update upload graphic

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </p>
             <br/>
             <p>
-              Sau tất cả những gì anh Khoa kể từ các mốc thời gian cô với a Khoa quen nhau, và những chuyện tôi biết từ vài người khác, thì tôi đã hiểu rõ con người cô là như thế nào rồi =))) cô khác xa so với Mơ mà tôi biết quá.
+              Sau tất cả những gì anh Khoa kể từ các mốc thời gian cô với a Khoa quen nhau, Vũ nữa này, và những chuyện tôi biết từ vài người khác, thì tôi đã hiểu rõ con người cô là như thế nào rồi =))) cô khác xa so với Mơ mà tôi biết quá.
               Tôi không muốn làm bạn với con người như vậy thì tôi block? Còn cô sai ở đâu, sai như nào thì cô tự biết. Tôi mà kể ra thì chắc lại hơi dài, cô nên nhớ tôi biết những gì (tôi còn biết cả việc trưa cô đăng IG <3 H, còn tối lại đăng 3-4 cái story Tiktok rồi tag anh Khoa cơ. Thì đúng rồi lúc đó H đâu có follow Tiktok, anh Khoa đâu có follow IG đâu =)) ), cô cũng nên nhớ cô kể cho tôi những gì
               và tôi có những bằng chứng gì. Hmm, chúng ta cũng đã trò chuyện được gần nửa năm rồi đó, trong khoảng thời gian đó chưa 1 lần tôi hết thương hết quý con người mà cô "diễn" với tôi, cũng gọi là có nhiều kỷ niệm, vui có buồn có nên nếu cô còn chút tôn trọng với "niềm tự hào của em" này. Tôi chỉ muốn xin cô 1 điều cuối, tôi không muốn dây dưa gì với cô nữa, làm ơn đừng lôi tôi vào những bất cứ cuộc trò chuyện của cô sau này, đừng nhắc gì đến nhau nữa làm ơn.
             </p>
