--- a/index.html
+++ b/index.html
@@ -1,174 +1,11 @@
-<!DOCTYPE html>
-<html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hmmm -.-</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: 'Times New Roman', serif;
-        background: #f5f5f5;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-      }
-
-      .letter-container {
-        background: white;
-        max-width: 800px;
-        width: 100%;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        border: 1px solid #ddd;
-        border-radius: 15px;
-        overflow: hidden;
-      }
-
-      .letter-header {
-        background: #2c3e50;
-        color: white;
-        padding: 20px 30px;
-        text-align: center;
-        border-bottom: 3px solid #34495e;
-      }
-
-      .letter-header h1 {
-        font-size: 1.8rem;
-        margin-bottom: 5px;
-        font-weight: normal;
-      }
-
-      .letter-date {
-        font-size: 0.9rem;
-        opacity: 0.8;
-      }
-
-      .letter-body {
-        padding: 40px;
-        line-height: 1.8;
-        font-size: 1.1rem;
-        color: #333;
-      }
-
-      .letter-greeting {
-        margin-bottom: 20px;
-        font-weight: bold;
-      }
-
-      .letter-content {
-        margin-bottom: 30px;
-        text-align: justify;
-      }
-
-      .letter-content p {
-        margin-bottom: 15px;
-      }
-
-      .letter-signature {
-        text-align: right;
-        margin-top: 40px;
-        font-style: italic;
-      }
-
-      .message-screen {
-        display: block;
-      }
-
-
-      .message-content {
-        font-size: 1.2rem;
-        color: #2c3e50;
-        margin-bottom: 25px;
-        line-height: 1.8;
-        text-align: justify;
-      }
-
-
-      @media (max-width: 768px) {
-        .letter-container {
-          margin: 10px;
-        }
-
-        .letter-body {
-          padding: 20px;
-        }
-
-        .letter-header {
-          padding: 15px 20px;
-        }
-
-        .letter-header h1 {
-          font-size: 1.5rem;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="letter-container">
-      <!-- Message Screen -->
-      <div class="message-screen" id="messageScreen">
-        <div class="letter-header">
-          <h1>Đôi lời tử tế cuối cùng tôi dành cho cô</h1>
-          <div class="letter-date" id="currentDate"></div>
-        </div>
-        <div class="letter-body">
-          <div class="letter-greeting">Chào cô gái tôi từng thương =))),</div>
-          <div class="message-content" id="messageContent">
-            <p>Tôi cũng không định làm cái này đâu, ra đi êm đẹp là tôi đã hết lòng với cô lắm rồi. Nhưng có vẻ tôi là kẻ xấu trong câu truyện của cô với các anh khác nhiều quá nên tôi cần phải nói rõ một xíu.</p>
-            <br/>
-            <p>
-              Ừ thì "Trước ông đấy thích e e cũng trêu trêu xong đổi qua page", oi doi oi chơi chơi thôi hả =)) chơi chơi dữ ta.
-              Cô kể về anh Khoa cho tôi khác thế, thì tôi cũng không bất ngờ khi tôi trong câu chuyện của cô với anh Khoa tôi là người xấu như thế. 
-            </p>
-            <br/>
-            <p>
-              Ừ thì "ổng block em do em từ chối ổng 3 lần", ???? WTF ý là mình k rõ nguyên do thì đừng nói được không? Gửi cả ảnh vào clan cô block tôi trên game để thể hiện điều gì?
-            </p>
-            <br/>
-            <p>
-              Sau tất cả những gì anh Khoa kể từ các mốc thời gian cô với a Khoa quen nhau, Vũ nữa này, và những chuyện tôi biết từ vài người khác, thì tôi đã hiểu rõ con người cô là như thế nào rồi =))) cô khác xa so với Mơ mà tôi biết quá.
-              Tôi không muốn làm bạn với con người như vậy thì tôi block? Còn cô sai ở đâu, sai như nào thì cô tự biết. Tôi mà kể ra thì chắc lại hơi dài, cô nên nhớ tôi biết những gì (tôi còn biết cả việc trưa cô đăng IG <3 H, còn tối lại đăng 3-4 cái story Tiktok rồi tag anh Khoa cơ. Thì đúng rồi lúc đó H đâu có follow Tiktok, anh Khoa đâu có follow IG đâu =)) ), cô cũng nên nhớ cô kể cho tôi những gì
-              và tôi có những bằng chứng gì. Hmm, chúng ta cũng đã trò chuyện được gần nửa năm rồi đó, trong khoảng thời gian đó chưa 1 lần tôi hết thương hết quý con người mà cô "diễn" với tôi, cũng gọi là có nhiều kỷ niệm, vui có buồn có nên nếu cô còn chút tôn trọng với "niềm tự hào của em" này. Tôi chỉ muốn xin cô 1 điều cuối, tôi không muốn dây dưa gì với cô nữa, làm ơn đừng lôi tôi vào những bất cứ cuộc trò chuyện của cô sau này, đừng nhắc gì đến nhau nữa làm ơn.
-            </p>
-            <br/>
-            <b>
-              Đôi lời cuối cùng tôi muốn gửi tới Mơ mà tôi thương (cái người mà cô diễn với tôi ý, không phải cô bây giờ). Em từng nói em muốn con em sẽ được hạnh phúc, có cuộc sống trọn vẹn, đầy đủ ba mẹ không muốn giống như em trong quá khứ. Em muốn có một người chồng trung thủy hết mực yêu em.
-              Em ghét thằng nyc em vì nó cắm sừng em 2-3 cái sừng. Vậy thì anh chúc em làm được điều đó, nhưng mà để làm được điều đó em cũng phải cố gắng giữ bản thân mình sống đúng như những gì em mong muốn từ một người chồng.
-              Đừng như Mơ của hiện tại, anh thấy đang giống hệt như những gì mà mẹ và người yêu cũ đã làm đó. Đừng vì mình bị đối xử như vậy mà cho mình quyền đỗi xử với người khác như thế em nhé.
-              Em vẫn còn trẻ con anh biết chứ, nhưng đến lúc em phải trưởng thành rồi, cố gắng lên nhé Mơ mà anh từng biết -.-.
-            </b>
-            <br/>
-            <br/>
-            <b>
-              Tạm biệt em, cô gái tôi thương chưa bao giờ có thật trên đời.
-            </b>
-          </div>
-          <div class="letter-signature">
-            <p>Trân trọng, Jennie43.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <script>
-      // Set fixed date
-      function setCurrentDate() {
-        const dateString = '13 tháng 10 năm 2025';
-        document.getElementById('currentDate').textContent = dateString;
-      }
-
-      // Initialize date when page loads
-      window.onload = function() {
-        setCurrentDate();
-      };
-    </script>
-  </body>
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cuczang</title>
+    </head>
+    <body>
+        <h1>Pai pai pai</h1>
+    </body>
 </html>
